# cpp_sample_project

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Readme.md  conanfile.py  requirements.txt
.github/workflows/: build.yml  cmake-build.yml  diagnostics.yml  docs.yml  set_env_vars.sh
.github/workflows/conan/profiles/: clang  gcc  macos-arm64-clang  macos-armv8-clang  msvc  msvc-clang
app/: CMakeLists.txt  main.cpp
cmake/: conan_provider.cmake
doc/: conf.py  index.rst
include/euler/: euler.h
scripts/: changed_files.py
src/: CMakeLists.txt
src/euler/: CMakeLists.txt  problem_1.cpp
test/core/: CMakeLists.txt
test/euler/: CMakeLists.txt  main.cpp  test_problem_1.cpp
